# biblio-rag

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TASKS.md  Taskfile.yml  conftest.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: notify.sh  ruff-format.sh
.claude/skills/allowlist/: SKILL.md
.claude/skills/commit/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: 2nd-local.md  atr.md  commit-convention.md  design.md  python-guidelines.md  quickstart.md  rag-improvements.md  testing.md
docs/adr/: 0001-layer-separation.md  0002-execution-platforms.md  0003-messaging-sqs.md  0004-fargate-zero-scale.md  0005-ollama-dev-embeddings.md  0006-local-to-aws.md  0007-chunking-strategy.md  0008-object-storage-minio.md  0009-claude-hooks-and-subagents.md  0010-e2e-testing-strategy.md  0011-aws-serverless-pipeline.md  0012-chat-webui.md  0013-rag-improvements.md  0013-rag-precision-improvements.md  0014-eval-search-metrics.md  0015-zero-cost-deployment.md  README.md
infra/db/: 001_schema.sql  002_add_embed_model.sql  003_add_ingestion_status.sql
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
scripts/: 2nd_local.sh  atr-precommit.sh  atr-scan.sh  atr_gate.py  eval_search.py
tests/: test_atr_gate.py  test_bedrock_chat_client.py  test_bedrock_embedder.py  test_book_management.py  test_chat_client.py  test_chunk.py  test_ci_workflow.py  test_docker_compose_bind_address.py  test_embed.py  test_embed_atomicity.py  test_embed_pipeline.py  test_eval_search.py  test_extract.py  test_lambda_handlers.py  test_localstack_e2e.py  test_observability.py  test_pgvector_store.py  test_pipeline_e2e.py  test_rag_improvements.py  test_rerank.py  test_search.py  test_search_score_threshold.py  test_static_security.py  test_status_persistence.py  test_storage.py  test_upload.py  test_webui_api.py  test_webui_auth.py  test_webui_chat.py  test_webui_chat_render.py  test_webui_chat_ui.py  test_webui_e2e.py  test_webui_error_handling.py
tests/fixtures/: eval_queries.json  make_fixture.py
webui/: README.md  auth.py  logging_config.py  server.py
webui/static/: app.js  chat.html  chat.js  index.html  style.css
webui/static/lib/: marked.min.js
workers/: config.py  storage.py  upload.py
workers/chat/: __init__.py  base.py  bedrock_chat.py  ollama_chat.py
workers/chunk/: __init__.py  __main__.py  base.py  chunk.py
workers/embed/: __init__.py  __main__.py  base.py  bedrock_embedder.py  ollama_embedder.py  pgvector_store.py  pipeline.py
workers/extract/: __init__.py  __main__.py  extract.py
workers/lambda_fns/: __init__.py  chunk_handler.py  embed_handler.py  events.py  extract_handler.py
workers/rerank/: __init__.py  base.py  sentence_reranker.py
workers/search/: __init__.py  __main__.py  search.py
workers/storage/: __init__.py  object_store.py  status_store.py
