[project]
name = "biblio-rag"
version = "0.1.0"
description = "日本語書籍 RAG パイプライン — PDF→抽出→チャンク→埋め込み→pgvector→検索 の取り込みパイプライン"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.30",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "reportlab>=4.5.1",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# target-version は requires-python (>=3.14) から自動推論される

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort（import 整列）
    "UP",      # pyupgrade（新しい構文へ）
    "B",       # flake8-bugbear（よくあるバグ）
    "SIM",     # flake8-simplify
    "C4",      # flake8-comprehensions
]

[tool.ruff.format]
# デフォルト（ダブルクォート・スペースインデント）を使用
