[project]
name = "biblio-rag"
version = "0.1.0"
description = "日本語書籍 RAG パイプライン — PDF→抽出→チャンク→埋め込み→pgvector→検索 の取り込みパイプライン"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.40",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.28.0",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "moto[s3,sqs]>=5.2.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "reportlab>=5.0.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# E2E（実インフラ/ブラウザ必須）は既定で除外。
# 明示実行: `uv run pytest -m e2e`（パイプライン） / `uv run pytest -m webui`（ブラウザ）。
addopts = "-m 'not e2e and not webui and not localstack'"
markers = [
    "e2e: 実インフラ(MinIO/pgvector/Ollama)が必要な取り込みパイプライン統合テスト",
    "webui: ブラウザ(Playwright)が必要な WebUI E2E",
    "localstack: Terraform+LocalStack の 2nd ステージ E2E（要 scripts/2nd_local.sh deploy）",
]

[tool.ruff]
line-length = 100
# target-version は requires-python (>=3.14) から自動推論される

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort（import 整列）
    "UP",      # pyupgrade（新しい構文へ）
    "B",       # flake8-bugbear（よくあるバグ）
    "SIM",     # flake8-simplify
    "C4",      # flake8-comprehensions
    "ANN",     # flake8-annotations（型注釈の欠落を検出）
    "RET",     # flake8-return（return 周りの簡素化）
    "PIE",     # flake8-pie（不要コードの検出）
    "N",       # pep8-naming（命名規約）
    "PTH",     # flake8-use-pathlib（os.path → pathlib）
]
ignore = [
    # boto3 クライアントや JSON ボディなど、外部由来で静的に型を決められない値には
    # 理由コメント付きで Any を許容する方針（Python AI-First 方針）のため無効化。
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
# テストコードには本体ほど厳格な型注釈・pathlib を課さない（段階導入）。
"tests/**" = ["ANN", "PTH", "PIE", "RET"]
# スクリプト類（開発補助）は本体の型注釈基準の対象外とする。
"scripts/**" = ["ANN"]

[tool.ruff.format]
# デフォルト（ダブルクォート・スペースインデント）を使用

# --- 型チェック（BasedPyright） ---
# 段階導入: まず standard モードで本体（workers/webui）を検査する。
# strict 化・tests への拡大は品質が安定してから ratchet する（Python AI-First 方針）。
[tool.basedpyright]
include = ["workers", "webui"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
