[project]
name = "biblio-rag"
version = "0.1.0"
description = "日本語書籍 RAG パイプライン — PDF→抽出→チャンク→埋め込み→pgvector→検索 の取り込みパイプライン"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.46",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.28.0",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.50.1",
]

[dependency-groups]
dev = [
    "moto[s3,sqs]>=5.2.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "reportlab>=5.0.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# E2E（実インフラ/ブラウザ必須）は既定で除外。
# 明示実行: `uv run pytest -m e2e`（パイプライン） / `uv run pytest -m webui`（ブラウザ）。
addopts = "-m 'not e2e and not webui and not localstack'"
markers = [
    "e2e: 実インフラ(MinIO/pgvector/Ollama)が必要な取り込みパイプライン統合テスト",
    "webui: ブラウザ(Playwright)が必要な WebUI E2E",
    "localstack: Terraform+LocalStack の 2nd ステージ E2E（要 scripts/2nd_local.sh deploy）",
]

[tool.ruff]
line-length = 100
# target-version は requires-python (>=3.14) から自動推論される

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort（import 整列）
    "UP",      # pyupgrade（新しい構文へ）
    "B",       # flake8-bugbear（よくあるバグ）
    "SIM",     # flake8-simplify
    "C4",      # flake8-comprehensions
]

[tool.ruff.format]
# デフォルト（ダブルクォート・スペースインデント）を使用
